# sum2-spracherkennung

./: .gitignore  README.md  fix.py  lib.py  pyproject.toml  report.py  tag.py  transcribe.py
templates/: report.html.j2
